Fix error with vertical scroll caused by fixing gap.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@ body {
     min-height: 100vh;
     display:flex;
     flex-direction:column;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 /* Header style */
